--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "private": "true",
   "version": "1.0.2",
   "scripts": {
-    "dev": "APP_ENV=development vite",
-    "build": "APP_ENV=production vite build"
+    "dev": "SET APP_ENV=development & vite",
+    "build": "SET APP_ENV=production & vite build"
   },
   "devDependencies": {
-    "@vitejs/plugin-legacy": "^1.6.4",
+    "@vitejs/plugin-legacy": "^1.7.1",
     "autoprefixer": "^10.4.2",
-    "eslint": "^8.7.0",
+    "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
-    "sass": "^1.49.0",
-    "stylelint": "^14.3.0",
+    "sass": "^1.49.7",
+    "stylelint": "^14.5.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
-    "vite": "^2.7.13",
+    "vite": "^2.8.2",
     "vite-plugin-live-reload": "^2.1.0"
   },
   "dependencies": {
