--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "ti-icons": "^0.1.2"
   }
 }
